syntax = "proto3";
package HostsRegistration;

import "google/protobuf/empty.proto";

option csharp_namespace = "Kernel";

enum HostOperationResult {
	ACCEPTED = 0;
	DECLINED = 1;
}

message HostDTO {
	string HostName = 1;
	string IP = 2;
	int32 ConnectionPort = 3; 
}

message HostRequest {
	HostDTO client = 1;
}

message HostResponse {
	HostOperationResult result = 1;
}

message RegisteredHostsResponse {
	repeated HostDTO clients = 1;
}

service HostsService {
	rpc RegisterHost (HostRequest) returns (HostResponse);
	rpc UnregisterHost (HostRequest) returns (HostResponse);
	rpc GetRegisteredHosts (google.protobuf.Empty) returns (RegisteredHostsResponse);
}